@@ -2,7 +2,9 @@ Package: MODIS
 Type: Package
 Title: Acquisition and Processing of MODIS Products
 Version: 1.1.1
-Date: 2017-08-16
+Date: 2018-01-15
+URL: https://github.com/MatMatt/MODIS
+BugReports: https://github.com/MatMatt/MODIS/issues
 Authors@R: c(
 	person("Matteo", "Mattiuzzi", role = c("aut")),
 	person("Jan", "Verbesselt", role = "ctb"),
@@ -16,7 +18,8 @@ Authors@R: c(
 	person("Florian", "Detsch", role = c("cre", "aut"), email = "fdetsch@web.de"))
 Description: Download and processing functionalities for the Moderate Resolution
     Imaging Spectroradiometer (MODIS). The package provides automated access to the
-    global online data archives (LPDAAC and LAADS) and processing capabilities such
+    global online data archives LP DAAC (<https://lpdaac.usgs.gov/>) and LAADS 
+    (<https://ladsweb.modaps.eosdis.nasa.gov/>) and processing capabilities such
     as file conversion, mosaicking, subsetting and time series filtering.
 License: MIT + file LICENSE
 LazyData: TRUE
@@ -43,7 +46,6 @@ Imports:
     stats,
     utils,
     XML
-URL: https://github.com/MatMatt/MODIS
 ByteCompile: TRUE
 RoxygenNote: 6.0.1
 Suggests: testthat
