@@ -7,18 +7,21 @@
 genString <- function(x, collection=NULL, date=NULL, what="images", local=TRUE, remote=TRUE, 
                       opts = NULL, ...)
 {
+  
+  if (is.null(opts))
+    opts <- combineOptions(checkTools = FALSE, ...)
+  
   product <- getProduct(x=x,quiet=TRUE)
 
   if(length(product$PRODUCT)>1)
   {
-    warning("genString() does not support multiple products! Generating 'path' for the first product:", product$PRODUCT[1], "\n")
+    warning("genString() does not support multiple products! Generating 'path' for the first product: ", product$PRODUCT[1], "\n")
     product <- lapply(product,function(x){x[1]}) # take only the first argument
   }
 
-  if(length(product$CCC)==0)
-  {
-    product$CCC <- getCollection(product=product$PRODUCT,collection=collection, 
-                                 checkTools = FALSE)[[1]]
+  if (length(product$CCC) == 0) {
+    product$CCC <- getCollection(product = product$PRODUCT, collection = collection, 
+                    checkTools = FALSE, quiet = TRUE)[[1]]
   }
      
   if (!is.null(date)) 
@@ -27,9 +30,6 @@ genString <- function(x, collection=NULL, date=NULL, what="images", local=TRUE, 
   }
 
   ## if options have not been passed down, create them from '...'
-  if (is.null(opts))
-    opts <- combineOptions(checkTools = FALSE, ...)
-  
   opts$auxPath <- setPath(opts$auxPath)
   remotePath <- localPath <- NULL    
     
