@@ -2,19 +2,29 @@ MODIS 1.1.1
 
 New features:
 
-  * Added remaining products from the LP DAAC MODIS Products Table (https://lpdaac.usgs.gov/dataset_discovery/modis/modis_products_table).
+  * Added remaining products from the LP DAAC MODIS Products Table (<https://lpdaac.usgs.gov/dataset_discovery/modis/modis_products_table>).
   * Explicit specification of 'pos1','pos2' arguments passed to extractDate() and orgTime() is no longer required when dealing with standard MODIS file names.
 
 Bugfixes:
 
   * 'unable to find an inherited method for function 'extent' for signature '"MODISextent"'' from getHdf() when 'extent' was a Spatial* object.
   * 'Error in rgdal::rawTransform(projfrom, projto, nrow(xy), xy[, 1], xy[, : no arguments in initialization list' due to insufficient strsplit() on Windows
+  * Orphaned hole and self-intersection errors from getTile() due to some non-valid geometries in map("worldHires", ...) (eg. "Philippines", "Spain").
+  * 'DATE' subfolder was created in getOption("MODIS_localArcPath") when running MODIS:::genString() with no particular date specified.
+  
+Changes:
+
+  * Disabled use of EPSV (see <https://curl.haxx.se/libcurl/c/CURLOPT_FTP_USE_EPSV.html>) when downloading structure from LP DAAC, LAADS. The latter didn't work anymore with EPSV enabled.
+  * getProduct() and getCollection() are now compatible with more than one input 'product' provided using eg. c().
+  * At the same time, pattern matching for a distinct set of products (see <https://github.com/MatMatt/MODIS/issues/22>) is switched off as long as a proper regular expression is omitted.
+  * The MODIS package is now licensed under the MIT license (<https://www.r-project.org/Licenses/MIT>).
+  
 
 MODIS 1.1.0
 
 New features:
 
-  * getTile() now supports interactive tile selection from the MODIS Sinusoidal grid powered by mapedit (https://github.com/r-spatial/mapedit).
+  * getTile() now supports interactive tile selection from the MODIS Sinusoidal grid powered by mapedit (<https://github.com/r-spatial/mapedit>).
   * Creation of yearly composite layers has been made available through temporalComposite() and aggInterval().
   * Meaning of 'quiet' argument in MODISoptions() has changed and now determines whether getHdf() (or runGdal()) print download information to the console. 
 
